2004-09-21  Noa Resare  <noa@resare.com>

	* libraries/clib/nio/FileChannelImpl.c
	(Java_gnu_java_nio_channels_FileChannelImpl_implTruncate):
	seek to new end of file when truncating the file (mirrors classpath)

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/all.files:
	Regenerated.

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/inet/imap/IMAPConnection.java,
	libraries/javalib/gnu/inet/pop3/POP3Connection.java,
	libraries/javalib/gnu/inet/smtp/SMTPConnection.java,
	libraries/javalib/gnu/inet/util/BASE64.java,
	libraries/javalib/gnu/inet/util/SaslCallbackHandler.java,
	libraries/javalib/gnu/inet/util/SaslCramMD5.java,
	libraries/javalib/gnu/inet/util/SaslLogin.java,
	libraries/javalib/gnu/inet/util/SaslPlain.java:
	Resynced with GNU Inetlib.

	2004-09-20  Chris Burdess  <dog@bluezoo.org>

        * BASE64.java: Padding characters at end of encoded data.

	2004-09-12  Chris Burdess  <dog@bluezoo.org>

        * IMAPConnection.java,POP3Connection.java,SMTPConnection.java,util:
            Fallback SASL clients for LOGIN, PLAIN, and CRAM-MD5.

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/applet/Applet.java,
	libraries/javalib/java/applet/AppletContext.java,
	libraries/javalib/java/applet/AppletStub.java,
	libraries/javalib/java/applet/AudioClip.java:
	Resynced with GNU Classpath.

	2004-09-21  Michael Koch  <konqueror@gmx.de>

        * java/applet/Applet.java,
        java/applet/AppletContext.java,
        java/applet/AppletStub.java,
        java/applet/AudioClip.java:
        Jalopied and checkstyle clean.

2004-09-21  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/im/spi/package.html,
	libraries/javalib/javax/crypto/package.html,
	libraries/javalib/javax/crypto/interfaces/package.html,
	libraries/javalib/javax/crypto/spec/package.html,
	libraries/javalib/javax/net/ServerSocketFactory.java,