@@ -6,6 +6,11 @@
 
 2004-09-21  Dalibor Topic  <robilad@kaffe.org>
 
+	*  libraries/javalib/java/security/BasicPermission.java
+	Replaced by implementation from GNU Classpath.
+
+2004-09-21  Dalibor Topic  <robilad@kaffe.org>
+
 	* libraries/javalib/Makefile.am,
 	libraries/javalib/Makefile.in,
 	libraries/javalib/all.files:
